fixed spacing within card

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* .container{
+.itemCards{
   display: flex;
   width: 100%;
   justify-content: space-around;
-} */
+  background-color: transparent;
+}
 
 h1{
   font-family: 'Montserrat', sans-serif;
@@ -72,6 +73,7 @@ code {
 .cardDude{
   width: 100%;
   margin: 0;
+  background-color: transparent;
 }
 #cardCon{
   background-color: transparent;
@@ -81,14 +83,14 @@ code {
         width: '100%';
         display: flex;
         justify-content: space-around;
-        align-items: space-around;
+        align-items: stretch;
 }
 
 .card-text{
         width: '100%';
         display: flex;
-        justify-content: space-around;
-        align-items: space-around;
+        justify-content: space-evenly;
+        align-items: stretch;
         padding: 1px 4px;
 }
 
